--- a/hangmanApp/Base.lproj/Main.storyboard
+++ b/hangmanApp/Base.lproj/Main.storyboard
@@ -192,6 +192,10 @@
                                         <color key="tintColor" red="0.10980392160000001" green="0.4431372549" blue="0.19215686269999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="filled" title="Try Again" cornerStyle="capsule"/>
+                                        <connections>
+                                            <action selector="onAlphabetTapped:" destination="Xup-3G-YuR" eventType="touchUpInside" id="1NY-HY-EWM"/>
+                                            <action selector="onTapTryAgain:" destination="Xup-3G-YuR" eventType="touchUpInside" id="GkE-4n-Gga"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                             </stackView>
