--- a/hangmanApp/Base.lproj/Main.storyboard
+++ b/hangmanApp/Base.lproj/Main.storyboard
@@ -81,7 +81,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="scene-a" translatesAutoresizingMaskIntoConstraints="NO" id="zmC-x8-oh1">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="scene-1" translatesAutoresizingMaskIntoConstraints="NO" id="zmC-x8-oh1">
                                 <rect key="frame" x="28" y="51.000000000000014" width="337" height="228.33333333333337"/>
                                 <constraints>
                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="335" id="LEN-cC-EBu"/>
@@ -89,13 +89,13 @@
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Let's Hang Someone" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nb3-bL-J9c">
-                                <rect key="frame" x="90" y="313" width="213" height="24"/>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
+                                <rect key="frame" x="90" y="313" width="213" height="26.333333333333314"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="22"/>
                                 <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <stackView opaque="NO" contentMode="scaleToFill" spacing="150" translatesAutoresizingMaskIntoConstraints="NO" id="rYF-CE-3PQ">
-                                <rect key="frame" x="38" y="377" width="318" height="26.333333333333314"/>
+                                <rect key="frame" x="38" y="379.33333333333331" width="318" height="26.333333333333314"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="Mr1-6c-1Wv">
                                         <rect key="frame" x="0.0" y="0.0" width="74.666666666666671" height="26.333333333333332"/>
@@ -106,7 +106,7 @@
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="#" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WyR-lM-0h8">
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WyR-lM-0h8">
                                                 <rect key="frame" x="61.333333333333336" y="0.0" width="13.333333333333336" height="26.333333333333332"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="22"/>
                                                 <nil key="textColor"/>
@@ -123,7 +123,7 @@
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="#" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="n3Y-sS-cer">
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="n3Y-sS-cer">
                                                 <rect key="frame" x="80" y="0.0" width="13.333333333333329" height="26.333333333333332"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="22"/>
                                                 <nil key="textColor"/>
@@ -134,7 +134,7 @@
                                 </subviews>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" spacing="25" translatesAutoresizingMaskIntoConstraints="NO" id="6FX-yn-P8b">
-                                <rect key="frame" x="62" y="441.33333333333331" width="271.33333333333331" height="38.333333333333314"/>
+                                <rect key="frame" x="62" y="443.66666666666669" width="271.33333333333331" height="38.333333333333314"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="_" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WDc-9S-y01">
                                         <rect key="frame" x="0.0" y="0.0" width="17.333333333333332" height="38.333333333333336"/>
@@ -181,7 +181,7 @@
                                 </subviews>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" spacing="22" translatesAutoresizingMaskIntoConstraints="NO" id="mu6-ah-jxC">
-                                <rect key="frame" x="83" y="729.66666666666663" width="227" height="34.333333333333371"/>
+                                <rect key="frame" x="83" y="732" width="227" height="34.333333333333371"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="V23-AK-diu">
                                         <rect key="frame" x="0.0" y="0.0" width="102.66666666666667" height="34.333333333333336"/>
@@ -198,14 +198,13 @@
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="filled" title="Try Again" cornerStyle="capsule"/>
                                         <connections>
-                                            <action selector="onAlphabetTapped:" destination="Xup-3G-YuR" eventType="touchUpInside" id="1NY-HY-EWM"/>
                                             <action selector="onTapTryAgain:" destination="Xup-3G-YuR" eventType="touchUpInside" id="GkE-4n-Gga"/>
                                         </connections>
                                     </button>
                                 </subviews>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="26" translatesAutoresizingMaskIntoConstraints="NO" id="op0-RU-yw9">
-                                <rect key="frame" x="5" y="539.66666666666663" width="385.33333333333331" height="155"/>
+                                <rect key="frame" x="5" y="542" width="385.33333333333331" height="155"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" alignment="center" spacing="-2" translatesAutoresizingMaskIntoConstraints="NO" id="4dD-Qp-1Eb">
                                         <rect key="frame" x="0.0" y="0.0" width="385.33333333333331" height="34.333333333333336"/>
@@ -389,7 +388,7 @@
                                         </subviews>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" alignment="center" spacing="2" translatesAutoresizingMaskIntoConstraints="NO" id="494-yv-nZ0">
-                                        <rect key="frame" x="51.333333333333343" y="120.66666666666673" width="282.66666666666663" height="34.333333333333329"/>
+                                        <rect key="frame" x="51.333333333333343" y="120.66666666666661" width="282.66666666666663" height="34.333333333333329"/>
                                         <subviews>
                                             <button opaque="NO" tag="26" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4jm-cb-CV3">
                                                 <rect key="frame" x="0.0" y="0.0" width="35" height="34.333333333333336"/>
@@ -503,7 +502,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="scene-a" width="187.33332824707031" height="208.33332824707031"/>
+        <image name="scene-1" width="187.33332824707031" height="208.33332824707031"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
